# Meticulous-to-Gaggimate-profile-adapter

./: .gitignore  Bailey_-_PSPH_Soup.json  Gentle_&_Sweet_v1.4.json  README.md  Slay-ish.json  Turbo_Ultimate.json  Ultra_Low_Contact.json  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: 20-mode-encoding.md
.planning/milestones/: v2.2-MILESTONE-AUDIT.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md
.planning/phases/07-extraction-objective-validation/: 07-01-SUMMARY.md
.planning/phases/08-extraction-type-validation/: 08-01-SUMMARY.md
.planning/phases/09-test-reporting/: 09-01-PLAN.md  09-01-SUMMARY.md  09-VERIFICATION.md
.planning/phases/11-validation-and-warnings/: 11-01-SUMMARY.md
.planning/phases/12-module-extraction-tests/: 12-01-PLAN.md  12-01-SUMMARY.md
.planning/phases/19-field-mappings-review/: 19-02-SUMMARY.md
.planning/phases/20-cli-mode-flag/: 20-01-SUMMARY.md  20-02-SUMMARY.md  20-UAT.md
.planning/phases/21-readme-mode-doc/: 21-01-SUMMARY.md
src/translate_profile/: __init__.py  batch_processor.py  cli.py  core.py  exceptions.py  exit_mode.py  translator.py
src/validate_profile/: __init__.py  cli.py  core.py  exceptions.py  models.py  reporter.py
tests/: test_basic_mapping.py  test_batch_processor.py  test_cli_modes.py  test_damians_lrv2.py  test_dynamics_splitting.py  test_exit_translation.py  test_exit_validation.py  test_power_scenarios.py  test_pressure_type.py  test_transition_modes.py  test_variable_resolution.py  verify_gaggimate_models.py  verify_json_parsing.py  verify_meticulous_models.py
(+13 files in other folders)
