[project]
name = "translate-profile"
version = "0.1.0"
description = "Espresso Profile Translator - Meticulous to Gaggimate conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "orjson>=3.10",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
translate-profile = "translate_profile.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "-p", "no:typeguard"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ARG", "PL", "TRY", "RUF"]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "PLR0913",  # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG001"]  # assert, magic values, unused arguments OK in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["orjson", "typer", "rich.*"]
ignore_missing_imports = true
